Added implimentations for MYSQL & started a data package

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jbdc:mysql://localhost:8080/coding_events
+spring.datasource.username=workouttracker
+spring.datasource.password=Painful1
+
+#Specify the DBMS
+spring.jpa.database = MYSQL
+
+#Show or not log for each sql query
+spring.jpa.show-sql = false
+
+# hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+
+#use spring.jpa.properties.* for hibernate native properties(the prefix is stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
