--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
-spring.datasource.url=jbdc:mysql://localhost:8080/coding_events
+# Database connection settings
+#spring.datasource.url=jdbc:mysql://localhost:8080/workouttracker
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/workouttracker
 spring.datasource.username=workouttracker
 spring.datasource.password=Painful1
 
-#Specify the DBMS
+# Specify the DBMS
 spring.jpa.database = MYSQL
 
-#Show or not log for each sql query
+# Show or not log for each sql query
 spring.jpa.show-sql = false
 
-# hibernate ddl auto (create, create-drop, update)
+# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 
-#use spring.jpa.properties.* for hibernate native properties(the prefix is stripped before adding them to the entity manager)
+# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+# stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
